--- a/css/works.css
+++ b/css/works.css
@@ -1,27 +1,19 @@
 #works {
     width: 980%;
-    min-height: 100vh;
+    height: 100vh;
     padding-top: 10em;
-    padding-left: 40em;
+    padding-left: 35em;
+    padding-right: 35em;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
     gap: 1em;
     overscroll-behavior: none;
     position: sticky;
     top: .2em;
 }
-/* .line_right {
-    width: 1px;
-    height: 100%;
-    border: 1.2px solid #aaa;
-    display: block;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-
+/* body.scroll1 #works{
+    position: static;
 } */
-
 #works > a {
     width: 30vw;
     min-height: 80vh;
@@ -48,49 +40,38 @@ pointer-events: none;
     /* rotate: 90deg; */
     color: #eee;
 }
+.contact_wrapper {
+    height: 100vh;
+    margin-top: 145em;
+    background: inherit;
+}
 .contact {
     width: 100%;
-    min-height: 100vh;
+    height: 100%;    
+    /* display: block; */
+    position: relative;
     display: flex;
-    align-items: center;
     flex-direction: column;
     justify-content: center;
-    gap: 10rem;
-background: #111;
-    margin-top: 120em;
     z-index: 999;
-    position: relative;
     overflow: hidden;
 }
-.contact h2 {
-    font-size: 2rem;
-    font-weight: 900;
-}
 .marque_container{
-    width: 95%;
-    border-top: 2px solid#eeeeee3d;
-    border-bottom: 2px solid#eeeeee3d;
-    padding: 2em;
-    margin: 4em;
-    
-}
-.marque {
-    animation: marque 20s infinite ease-in ;
-    display: flex;
-    align-items: center;
-}
-
-.marque span {
-    font-size: 10vw;
-    white-space: nowrap;
-    transform: translate(-50%);
-    font-weight: 700;
+    background: #222;
+    color: #6c6c6c;
     font-family: 'Bebas Neue', sans-serif;
-    transition: color 300ms;
+    border-radius: 3em;
+    padding: 2rem;
+    margin: 2rem;
+    text-align: center;
+    font-size: 10vw;
+    font-weight: 900;
+    transition: 300ms all;
 }
-.marque:hover > span {
-    color: #aaa;
-    animation-play-state: paused;
+.marque_container:hover {
+    background-color: #eee;
+    color: #111;
+    box-shadow: 3px 3px 30px 3px rgba(255, 255, 255, 0.717);
 }
 .contact footer {
     width: 100%;
