--- a/css/media.css
+++ b/css/media.css
@@ -26,6 +26,7 @@
   .hero_section .hero_container_2 {
     align-items: center;
     justify-content: right;
+    display: flex;
   }
   .hero_section .hero_container_2 ul {
     flex-direction: column;
@@ -72,13 +73,13 @@
     gap: 3em;
   }
   #works > a {
-    width: 95%;
+    width: 100%;
     min-height: 53vh;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 1em;
+    padding: .5em;
     gap: 1rem;
   }
   #works > a::after {
@@ -112,6 +113,7 @@
     width: 100%;
     height: 1px;
   }
+  
   .contact {
     width: 100%;
     min-height: 40vh;
@@ -147,6 +149,10 @@
 }
 
 @media screen and (max-width: 635px) {
+  .marque_container {
+    font-size: 2.4rem;
+    padding: 1rem;
+  }
   .hero_section .hero_container_1 p {
     font-size: 10.5vw;
     scale: 1.6 2.5;
