--- a/css/loader.css
+++ b/css/loader.css
@@ -12,7 +12,7 @@
 	--size: 80vmin;
 	--segment: calc(var(--size) / 100);
 	--loading-speed: 5s;
-	--color: #aaa;
+	--color: rgb(182, 54, 8);
   --total-length: 400;
 	--segments-per-second: calc(var(--loading-speed) / var(--total-length));
 }
@@ -27,11 +27,10 @@
   position: fixed;
   z-index: 1;
 }
-
-#flip:checked ~ .container {
+/* #flip:checked ~ .container {
 	--rotation-y: -24;
 	--rotation-x: -24;
-}
+} */
 
 [for] {
 	transform: translateZ(200vmin);
@@ -63,6 +62,8 @@
 	width: var(--size);
 	aspect-ratio: 16 / 1.25;
 	position: relative;
+	--rotation-y: -24;
+	--rotation-x: -24;
 }
 
 .scene {
