--- a/css/media.css
+++ b/css/media.css
@@ -66,6 +66,7 @@
 
   #works {
     width: 100%;
+    height: auto;
     flex-direction: column;
     padding: 0;
     position: static;
@@ -115,40 +116,32 @@
   }
   
   .contact {
-    width: 100%;
     min-height: 40vh;
-    display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5rem;
+    gap: 2rem;
     margin-top: 10em;
-    background: #111;
-    /* background: rgba(182, 54, 8, 0.644); */
-  }
-  .contact h2 {
-    font-size: 1rem;
-    font-weight: 900;
-    color: #eee;
   }
   .contact footer {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     padding: 1em;
     gap: 2em;
   }
   .f-links {
     display: flex;
-    flex-direction: column;
     gap: 1em;
-    /* width: 50%; */
-    flex-wrap: wrap;
   }
 }
 
 @media screen and (max-width: 635px) {
+  .contact_wrapper {
+    margin: 0;
+    height: fit-content;
+}
   .marque_container {
     font-size: 2.4rem;
     padding: 1rem;
