--- a/css/works.css
+++ b/css/works.css
@@ -87,6 +87,74 @@ pointer-events: none;
     align-items: flex-start;
 }
 
+.contact_wrapper {
+    height: 100vh;
+    margin-top: 145em;
+    background: inherit;
+    display: grid;
+    place-items: end;
+}
+.contact {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+}
+.marque_container{
+    background: #222;
+    color: #6c6c6c;
+    font-family: 'Bebas Neue', sans-serif;
+    border-radius: 3em;
+    padding: 2rem;
+    margin: 2rem;
+    text-align: center;
+    font-size: 10vw;
+    font-weight: 900;
+    transition: 300ms all;
+}
+.marque_container:hover {
+    background-color: #eee;
+    color: #111;
+    box-shadow: 3px 3px 30px 3px rgba(255, 255, 255, 0.717);
+}
+.contact footer {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3em 1em;
+    margin: 0 auto;
+}
+
+.f-links {
+    display: flex;
+    gap: 1em;
+    align-items: flex-start;
+}
+#f-links-span {
+  display: inline-block;
+  position: relative;
+  color: #0087ca;
+}
+
+#f-links-span::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(182, 54, 8);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+#f-links-span:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
 
 @keyframes marque {
     0% {
