--- a/css/media.css
+++ b/css/media.css
@@ -59,11 +59,15 @@
   }
   .about_c p {
     width: fit-content;
-    margin: 0em;
-    font-size: 1.4em;
-    animation-range-start: 100px;
+    margin: .5em;
+    font-size: 1em;
   }
-
+@keyframes fade-in {
+  to {
+    scale: 1;
+    opacity: 1;
+  }
+}
   #works {
     width: 100%;
     height: auto;
@@ -80,7 +84,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: .5em;
+    padding: 0.5em;
     gap: 1rem;
   }
   #works > a::after {
@@ -92,8 +96,8 @@
     text-align: center;
   }
   #works > a {
-      scale: 0.8;
-      opacity: 0;
+    scale: 0.8;
+    opacity: 0;
     animation: fade-in linear forwards;
     animation-timeline: view();
     animation-range-start: 100px;
@@ -114,7 +118,7 @@
     width: 100%;
     height: 1px;
   }
-  
+
   .contact {
     min-height: 40vh;
     flex-direction: column;
@@ -140,13 +144,19 @@
 @media screen and (max-width: 635px) {
   .about_header {
     font-size: 2rem;
-    margin: 1rem;
+    margin: .5rem;
     padding: 0;
+    scale: 0.8;
+    opacity: 0;
+    animation: fade-in linear forwards;
+    animation-timeline: view();
+    animation-range-start: 10px;
+    animation-range-end: contain;
   }
   .contact_wrapper {
     margin: 0;
     height: fit-content;
-}
+  }
   .marque_container {
     font-size: 2.4rem;
     padding: 1rem;
