--- a/css/media.css
+++ b/css/media.css
@@ -61,13 +61,10 @@
     width: fit-content;
     margin: .5em;
     font-size: 1em;
-  }
-@keyframes fade-in {
-  to {
+    animation: none;
     scale: 1;
     opacity: 1;
   }
-}
   #works {
     width: 100%;
     height: auto;
@@ -84,30 +81,13 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0.5em;
+    padding: 1em;
     gap: 1rem;
   }
   #works > a::after {
     content: "see live";
-    border: 1px solid #eeeeee3d;
-    border-radius: 1em;
-    padding: 0.5em;
     width: 100%;
-    text-align: center;
-  }
-  #works > a {
-    scale: 0.8;
-    opacity: 0;
-    animation: fade-in linear forwards;
-    animation-timeline: view();
-    animation-range-start: 100px;
-    animation-range-end: contain;
-  }
-  @keyframes fade-in {
-    to {
-      scale: 1;
-      opacity: 1;
-    }
+    text-align: start;
   }
   .w_header {
     font-size: 2rem;
@@ -146,20 +126,15 @@
     font-size: 2rem;
     margin: .5rem;
     padding: 0;
-    scale: 0.8;
-    opacity: 0;
-    animation: fade-in linear forwards;
-    animation-timeline: view();
-    animation-range-start: 10px;
-    animation-range-end: contain;
   }
   .contact_wrapper {
     margin: 0;
     height: fit-content;
   }
   .marque_container {
-    font-size: 2.4rem;
+    font-size: 2.8rem;
     padding: 1rem;
+    margin: 0;
   }
   .hero_section .hero_container_1 p {
     font-size: 10.5vw;
